--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Counter</title>
-   <link rel="stylesheet" href="./index.css">
+   <link rel="stylesheet" href="./file/index.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
       </div>
    </div>
 
-   <script src="./index.js"></script>
+   <script src="./file/index.js"></script>
 </body>
 
 </html>
