used icon for like  and dislike

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Counter</title>
    <link rel="stylesheet" href="index.css">
+   <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 </head>
 
 <body>
@@ -15,9 +16,9 @@
    <div class="container">
       <div id="number">0</div>
       <div class="buttons">
-         <button onclick ="increment()"type="button" id="btn1">+</button>
+         <button onclick ="increment()"type="button" id="btn1"><i class='bx bx-like'></i></button>
          <button onclick ="reset()" type="button" id="btn2">Reset</button>
-         <button onclick ="decrement()" type="button" id="btn3">-</button>
+         <button onclick ="decrement()" type="button" id="btn3"><i class='bx bx-dislike'></i></button>
       </div>
    </div>
 
